# ode

./: README.md  lorenz.ipynb  pyproject.toml  simple_harmonic.ipynb
examples/: basic_usage.ipynb
src/ode/: core.py  plotting.py
