[project]
name = "cpt-ode"
version = "0.0.1"
authors = [
  { name="Colin Thackray", email="thackray@seas.harvard.edu" },
]
description = "A simple set of ODE tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/cpthackray/ode"
Issues = "https://github.com/cpthackray/ode/issues"
